--- a/css/style.css
+++ b/css/style.css
@@ -1,141 +1,133 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
 
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 body {
-    font-family: Inter, sans-serif;
-    min-height: 100vh;
-    background-color: hsl(233, 47%, 7%);
+    font-family: outfit;
+    background: hsl(217, 54%, 11%);
+    width: 100vw;
+    height: 100vh;
     display: flex;
+    justify-content: center;
     align-items: center;
-    font-size: 15px;
 }
 
 .container {
-    max-width: 1020px;
-    margin: 0 auto;
+    background-color: hsl(216, 50%, 16%);
+    padding: 1em;
+    border-radius: 10px;
+    width: 15em;
 }
 
-.wrapper {
-    background-color: hsl(244, 38%, 16%);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    border-radius: 15px;
-    overflow: hidden;
-    margin: 2rem;
-}
-
-.img-component img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.img-component {
+.page-image {
     position: relative;
+    cursor: pointer;
 }
 
-.img-component::after {
+.page-image img {
+    border-radius: 8px;
+}
+.view {
     position: absolute;
-    content: '';
+    top: 0;
     width: 100%;
     height: 100%;
-    left: 0;
-    right: 0;
-    background-color: hsla(277, 64%, 61%, 0.6);
+    opacity: 0;
+    transition: 0.5s;
 }
 
-.text-component {
-    padding: 13%;
+.view img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.title {
+.view:hover {
+    background-color: hsl(178, 100%, 50%, 60%);
+    opacity: 1;
+}
+
+h1 {
     color: hsl(0, 0%, 100%);
-    font-weight: 700;
-    padding-bottom: 22px;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 15px;
 }
 
-.title span {
-    color: hsl(277, 64%, 61%);    ;
-}
-.subtitle {
-    color: hsla(0, 0%, 100%, 0.75);
-    line-height: 1.8;
+h1:hover {
+    cursor: pointer;
+    color: hsl(215, 51%, 70%);
 }
 
-.stat-box {
+.para {
+    color: hsl(215, 51%, 70%);
+    font-size: 13px;
+    font-weight: 400;
+    margin-top: 15px;
+    line-height: 1.6;
+}
+
+.collection {
     display: flex;
     justify-content: space-between;
-    text-transform: uppercase;
-    padding-top: 60px;
+    align-items: center;
+    font-weight: 600;
+    color: hsl(178, 100%, 50%);
+    margin-top: 10px;
+    flex-wrap: wrap;
 }
 
-.stat-box p.num {
-    color: hsl(0, 0%, 100%);
-    font-size: 25px;
-    font-weight: 700;
-    margin-bottom: 7px;
+
+.collection p {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin-bottom: 15px;
+    font-size: 10px;
 }
 
-.stat-box p {
-    color: hsla(0, 0%, 100%, 0.6);
+.collection::after {
+    content: '.';
+    font-size: 0;
+    display: block;
+    width: 100%;
+    height: 1px;
+    border-top: 1px solid hsl(215, 32%, 27%);
+    margin-bottom: 10px;
+}
+.days {
+    color: hsl(215, 51%, 70%);
 }
 
-/**** MEDIA QUERY *********/
-
-@media only screen and (max-width: 768px) and
-(min-width: 28.3em) {
-    body {
-        font-size: 12px;
-    }
-
-    .text-component {
-        padding: 12%;
-    }
-
-    .title {
-        font-size: 22px;
-    }
-
-    .stat-box {
-        padding-top: 30px;
-    }
-
-    .stat-box p.num {
-        font-size: 17px;
-    }
+.collection span {
+   padding-left: 5px;
 }
 
-@media only screen and (max-width: 425px) {
-    body {
-        text-align: center;
-    }
-
-    .wrapper {
-        grid-template-columns: 1fr;
-    }
-
-    .img-component {
-        order: -1;
-    }
-
-    .text-component {
-        padding: 12%;
-    }
-
-    .title {
-        font-size: 23px;
-        line-height: 1.4;
-    }
-    .stat-box {
-        flex-direction: column;
-        padding-top: 30px;
-    }
-
-    .stat-box div {
-        margin-top: 20px;
-    }
+.footer {
+    display: flex;
+    font-size: 12px;
+    height: 100%;
+    align-items: center;
+    color: hsl(178, 100%, 50%);
 }
+
+.footer:hover {
+    cursor: pointer;
+    color: hsl(215, 51%, 70%);
+}
+
+.footer img {
+    margin-right: 10px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+}
+
+.footer span {
+    color:  hsl(0, 0%, 100%);
+}
+
+
